# wallPaper

./: .gitignore  README.md  UI.ui  data.json  pyproject.toml
launch/src/: main.cpp  run.sh
run/: requirements.txt
run/src/: gui.py  logger.py  main.py  save.py  tray.py  worker.py
src/: gui.py  main.py  save.py  tray.py  worker.py
src/res/: data.json
wallPaper/: gui.py  main.py  save.py  worker.py
wallpaper/: UI.ui  gui.py  main.py  save.py  tray.py  worker.py
