[tool.poetry]
name = "wallpaper"
version = "0.1.0"
description = "a wallPaper changer"
authors = ["leolee0209 <lleeooooo0209@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
PyQt6 = "^6.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



